--- a/src/web/templates/assay_types.html
+++ b/src/web/templates/assay_types.html
@@ -181,6 +181,28 @@
 </div>
 {% endblock %}
 
+{% block styles %}
+<style>
+    html, body {
+        height: 100%;
+    }
+    body {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+    }
+    main {
+        flex: 1 0 auto;
+    }
+    footer {
+        flex-shrink: 0;
+        width: 100%;
+        position: relative;
+        bottom: 0;
+    }
+</style>
+{% endblock %}
+
 {% block scripts %}
 <script>
 function showAssayTypeDetails(assayTypeId) {
